correcting table-with-header spacing

--- a/assets/_styles/core/tables.scss
+++ b/assets/_styles/core/tables.scss
@@ -16,7 +16,6 @@
 
 .table__header {
   @extend %header-with-actions;
-  line-height: 1.75;
   span {
     @extend %paragraph;
     font-weight: 400;
