--- a/assets/_styles/core/tools.scss
+++ b/assets/_styles/core/tools.scss
@@ -45,7 +45,7 @@
 %header-with-actions {
   float: left;
   width: 100%;
-  padding-bottom: 12px;
+  padding-bottom: 8px;
   h3,
   h4 {
     float: left;
@@ -54,7 +54,7 @@
   }
   .actions-container {
     float: right;
-    margin: 0 -5px 0 0;
+    margin: -7px -5px 0 0;
     display: block;
   }
   select {
